# blendgine-final

./: .gitattributes  .gitignore  .prettierrc  README.md  eslint.config.js  global.d.ts  index.html  keyboard_shortcuts.txt  layer-order-zoom.html  layersview.html  offset-window.html  package.json  rules.html  shortcuts.html  tailwind.config.js  theme-colors.html  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/editmetadata/: editmetadata.rs  mod.rs
src-tauri/src/effects/core/: mod.rs
src-tauri/src/ffmpeg_wrapper/: get_ffmpeg.rs  mod.rs  wrapper.rs
src-tauri/src/ffmpeg_wrapper/encode/: encode_gif.rs  encode_mp4.rs  encode_webm.rs  encode_webp.rs  mod.rs
src-tauri/src/filesystem/: constants.rs  default_json.rs  folderhash.rs  mod.rs  persist.rs  rarity.rs  rename.rs  storage.rs  temp_dir.rs  utils.rs
src-tauri/src/generation/: clean_up_contexts.rs  generation_main.rs  mod.rs
src-tauri/src/generation/generate/: cache.rs  (+6 more)
src-tauri/src/layerpreview/: mod.rs
src-tauri/src/legendaries/: legendaries.rs  mod.rs  utils.rs
src-tauri/src/renderer/: mod.rs
src-tauri/src/saveload/: saveload.rs
src-tauri/src/theme/: mod.rs
src-tauri/src/types/: mod.rs
src-tauri/src/window_manager/: layer_order_zoom_window.rs  layersview_window.rs  mod.rs  offset_window.rs  rules_window.rs  screen_utils.rs  shortcuts_window.rs  show_dialog.rs  theme_colors_window.rs  window_communication.rs  window_manager.rs  zoom_effects_window.rs
(+763 files in other folders)
