[package]
name = "blendgine"
version = "1.0.0"
description = "Blendgine"
authors = ["PxlSyl"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.4", features = ["protocol-asset", "unstable", "wry"] }
tauri-plugin-fs = "2.4"
tauri-plugin-shell = "2.3"
tauri-plugin-dialog = "2.4"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
image = { version = "0.25.6", features = ["gif", "webp", "png", "jpeg"] }
fast_image_resize = { version = "5.2.1", features = ["image", "only_u8x4"] }
rusttype = "0.9"
png = "0.17"
webp-animation = { version = "0.9.0", features = ["image"] }
flate2 = "1.0"
zip = "4.2.0"
anyhow = "1.0"
sha2 = "0.10"
walkdir = "2.4"
rand = "0.8"
rand_chacha = "0.3"
chrono = "0.4"
futures = "0.3"
lazy_static = "1.4.0"
dirs = "5.0"
once_cell = "1.19.0"
rayon = "1.8"
parking_lot = "0.12"
csv = "1.3.0"
rust_xlsxwriter = "0.89.1"
num_cpus = "1.16.0"
sysinfo = "0.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time", "env-filter"] }
lru = "0.12.1"
wgpu = "0.17.0"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
tempfile = "3.8.1"
rustfft = "6.1"
num-complex = "0.4"
either = "1.9"
crossbeam = "0.8"
thread_local = "1.0"
dashmap = "6.1.0"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
